fix height of empty chart, so that scrollbar doesn't appear

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1092,6 +1092,7 @@ button > i {
 		list-style-type: none;
 		text-transform: uppercase;
 	}
+		
 		#chart-view #chart-chart-tab {
 			overflow: hidden;
 		}
@@ -1142,7 +1143,7 @@ button > i {
 	#chart-view .tab-content {
 		position: relative;
 		/* height is later modified in js */ 
-		height: calc(100% - 25px);
+		height: calc(100% - 60px);
 	}
 	#chart-view .tab-pane {
 		position: relative;
