--- a/resources/assets/css/chart.css
+++ b/resources/assets/css/chart.css
@@ -101,6 +101,7 @@
 		list-style-type: none;
 		text-transform: uppercase;
 	}
+		
 		#chart-view #chart-chart-tab {
 			overflow: hidden;
 		}
@@ -151,7 +152,7 @@
 	#chart-view .tab-content {
 		position: relative;
 		/* height is later modified in js */ 
-		height: calc(100% - 25px);
+		height: calc(100% - 60px);
 	}
 	#chart-view .tab-pane {
 		position: relative;
